fix sider contrast CCWEB-13261

--- a/src/components/04-Components/slider/slider-js-nav/_components.slider-js-nav.css
+++ b/src/components/04-Components/slider/slider-js-nav/_components.slider-js-nav.css
@@ -8,9 +8,8 @@
 .c-slider-js-nav-wrap {
   @apply
     py-24
+    bg-primary
   ;
-
-  background-color: var(--color__primary--600);
 }
 
 .c-slider-js-nav-container {
